--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>allyourhttpbase</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>AllYourHttpBase</name>
-	<description>A Java HTTP foundational API</description>
+	<description>HTTP foundational API</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
